--- a/pom.xml
+++ b/pom.xml
@@ -47,39 +47,44 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <plugins>
-            <!-- Maven Compiler Plugin -->
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>18</release>
-                </configuration>
-            </plugin>
+    <sourceDirectory>src</sourceDirectory>
+    <resources>
+        <resource>
+            <directory>resources</directory> <!-- Path to the resources folder -->
+        </resource>
+    </resources>
+    <plugins>
+        <!-- Maven Compiler Plugin -->
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <release>18</release>
+            </configuration>
+        </plugin>
 
-            <!-- JavaFX Maven Plugin for running JavaFX -->
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>MenuSelectionGUI</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>${maven.repo.local}/org/openjfx</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+        <!-- JavaFX Maven Plugin for running JavaFX -->
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <mainClass>MenuSelectionGUI</mainClass>
+                <options>
+                    <option>--module-path</option>
+                    <option>${maven.repo.local}/org/openjfx</option>
+                    <option>--add-modules</option>
+                    <option>javafx.controls,javafx.fxml</option>
+                </options>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
